--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "awilix": "^8.0.1",
+    "medusa-fulfillment-mondialrelay": "^0.5.1",
     "pg": "^8.13.0"
   },
   "devDependencies": {
