feat: add production dockerfile

--- a/compose.yml
+++ b/compose.yml
@@ -29,7 +29,9 @@ services:
   # This service runs the Medusa backend application
   # and the admin dashboard.
   medusa:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile.production
     container_name: medusa_backend
     restart: unless-stopped
     depends_on:
