--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -36,8 +36,7 @@ FROM node:20-alpine AS runtime
 # Install runtime dependencies
 RUN apk add --no-cache \
     curl \
-    dumb-init \
-    tini
+    dumb-init
 
 # Environment variables
 ENV NODE_ENV=production \
@@ -62,9 +61,78 @@ COPY --chown=medusa:medusa --from=builder /app/uploads ./uploads
 RUN mkdir -p /app/uploads && \
     chown -R medusa:medusa /app/uploads
 
-# Copy entrypoint script
-COPY --chown=medusa:medusa docker-entrypoint.sh /app/docker-entrypoint.sh
-RUN chmod +x /app/docker-entrypoint.sh
+# Switch to root temporarily to create entrypoint
+USER root
+
+# Create entrypoint script inline
+RUN cat > /app/docker-entrypoint.sh <<'ENTRYPOINT'
+#!/bin/sh
+set -e
+
+echo "================================================"
+echo "Starting Medusa Backend Service"
+echo "================================================"
+
+# Environment Variables Validation
+if [ -z "$DATABASE_URL" ]; then
+    echo "ERROR: DATABASE_URL is not set." >&2
+    exit 1
+fi
+
+if [ -z "$REDIS_URL" ]; then
+    echo "ERROR: REDIS_URL is not set." >&2
+    exit 1
+fi
+
+# Set defaults for optional variables
+MEDUSA_WORKER_MODE=${MEDUSA_WORKER_MODE:-server}
+DISABLE_MEDUSA_ADMIN=${DISABLE_MEDUSA_ADMIN:-false}
+
+echo "Configuration:"
+echo "  - NODE_ENV: ${NODE_ENV}"
+echo "  - Worker Mode: ${MEDUSA_WORKER_MODE}"
+echo "  - Admin Disabled: ${DISABLE_MEDUSA_ADMIN}"
+echo "  - Port: ${PORT}"
+
+# Wait for dependencies
+echo ""
+echo "Waiting for database to be ready..."
+until nc -z postgres 5432 2>/dev/null; do
+    echo "  Waiting for PostgreSQL..."
+    sleep 2
+done
+echo "✓ PostgreSQL is ready"
+
+echo "Waiting for Redis to be ready..."
+until nc -z redis 6379 2>/dev/null; do
+    echo "  Waiting for Redis..."
+    sleep 2
+done
+echo "✓ Redis is ready"
+
+# Database Migrations & Links Sync
+echo ""
+echo "Running database migrations..."
+npx medusa db:migrate
+
+echo "Syncing database links..."
+npx medusa links:sync
+
+# Start Medusa Application
+echo ""
+echo "================================================"
+echo "Starting Medusa in ${MEDUSA_WORKER_MODE} mode..."
+echo "================================================"
+
+cd /app/.medusa/server
+
+# Start the application
+exec npm run start
+ENTRYPOINT
+
+# Set proper permissions
+RUN chmod +x /app/docker-entrypoint.sh && \
+    chown medusa:medusa /app/docker-entrypoint.sh
 
 # Switch to non-root user
 USER medusa
@@ -76,6 +144,5 @@ EXPOSE 9000
 HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:${PORT}/health || exit 1
 
-# Use tini as init system for proper signal handling
-ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["/app/docker-entrypoint.sh"]
+# Use dumb-init for proper signal handling, then execute script with sh
+ENTRYPOINT ["/usr/bin/dumb-init", "--", "/bin/sh", "/app/docker-entrypoint.sh"]
