--- a/compose.yml
+++ b/compose.yml
@@ -5,16 +5,20 @@ services:
     container_name: medusa_postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: $DB_NAME
-      POSTGRES_USER: $DB_USERNAME
-      POSTGRES_PASSWORD: $DB_PASSWORD
+      POSTGRES_DB: ${DB_NAME:-medusa-store}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./postgres-init:/docker-entrypoint-initdb.d
     networks:
       - medusa_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Redis
   redis:
@@ -25,32 +29,40 @@ services:
       - "6379:6379"
     networks:
       - medusa_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Medusa Server
-  # This service runs the Medusa backend application
-  # and the admin dashboard.
   medusa:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile.production
     container_name: medusa_backend
     restart: unless-stopped
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
       - "9000:9000"
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/medusa-store
+      - NODE_ENV=production  # ← IMPORTANT: mode production
+      - DATABASE_URL=postgres://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-medusa-store}
       - REDIS_URL=redis://redis:6379
+      - PORT=9000
+      - MEDUSA_WORKER_MODE=server
     env_file:
       - .env
-    volumes:
-      - .:/app
-      - /app/node_modules
     networks:
       - medusa_network
+    # RETIRE les volumes pour la production
+    # volumes:
+    #   - .:/app
+    #   - /app/node_modules
 
 volumes:
   postgres_data:
