--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,51 @@
+# Dependencies
 node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.git
-.gitignore
-README.md
-.env.test
-.nyc_output
-coverage
-.DS_Store
-*.log
+pnpm-debug.log*
+
+# Build outputs
+.medusa
 dist
 build
+.next
+out
+
+# Environment files
+.env*
+!.env.example
+
+# Git
+.git
+.gitignore
+.gitattributes
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Testing
+coverage
+.nyc_output
+
+# Temp
+tmp
+temp
+*.tmp
+
+# Docker
+Dockerfile*
+docker-compose*.yml
+.dockerignore
